# RECESS-PROJECT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BI_Platform_Presentation.pptx  BI_Platform_Presentation_HowItWorks.pptx  BI_Platform_Presentation_Lecturer.pptx  Dockerfile  LICENSE  README.md  SECURITY.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  restore_mysql.py  run.py  seed_mysql.py  seed_postgresql.py  seed_postgresql_fast.py  temp_extract_pptx.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7a4a43c42b2d_initial_schema.py
bi_platform/: __init__.py  admin.py  auth.py  cache.py  config.py  logging_config.py  models.py  nl_query.py  routes.py  saved_views.py  tasks.py
bi_platform/analytics/: __init__.py  anomaly.py  forecasting.py
bi_platform/core/: __init__.py  analytics_engine.py  data_processor.py  database_connector.py  query_builder.py
bi_platform/reports/: __init__.py  excel_report.py  pdf_report.py
bi_platform/static/css/: dashboard.css
bi_platform/static/js/: dashboard.js
bi_platform/templates/: admin_users.html  dashboard.html  login.html  register.html  report_preview.html
bi_platform/utils/: __init__.py  helpers.py
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  redis.yaml  secret.yaml
tests/: conftest.py  test_analytics_engine.py  test_auth.py  test_data_processor.py  test_database_connector.py  test_helpers.py  test_query_builder.py  test_routes.py
