[project]
name = "bi-platform"
version = "1.0.0"
description = "A modern Business Intelligence platform with real-time dashboards and multi-database support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BI Platform Team"},
]
keywords = ["business-intelligence", "dashboard", "analytics", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "flask>=3.0,<4.0",
    "flask-socketio>=5.3,<6.0",
    "flask-cors>=6.0,<7.0",
    "flask-limiter>=3.5,<4.0",
    "flask-wtf>=1.2,<2.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.24,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "pymysql>=1.1,<2.0",
    "pyodbc>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "pip-audit>=2.7,<3.0",
]

[project.urls]
Homepage = "https://github.com/2322-hub/RECESS-PROJECT"
Repository = "https://github.com/2322-hub/RECESS-PROJECT"
Issues = "https://github.com/2322-hub/RECESS-PROJECT/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",  # assert used (fine in tests)
    "S105",  # hardcoded passwords (used in config defaults)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"run.py" = ["E402"]
"alembic/**" = ["ALL"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bi_platform"]
omit = ["tests/*", "run.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75
